syntax = "proto3";

package ypb;
option go_package = "/;ypb";
import "message_api.proto";


service CVEApi {
  // CVE
  rpc IsCVEDatabaseReady(IsCVEDatabaseReadyRequest) returns (IsCVEDatabaseReadyResponse);
  rpc UpdateCVEDatabase(UpdateCVEDatabaseRequest) returns (stream ExecResult);
  //
  rpc ExportsProfileDatabase(ExportsProfileDatabaseRequest) returns (stream ExecResult);
  rpc ImportsProfileDatabase(ImportsProfileDatabaseRequest) returns (stream ExecResult);

  rpc QueryCVE(QueryCVERequest) returns (QueryCVEResponse);
  rpc GetCVE(GetCVERequest) returns (CVEDetailEx);
}

message CWEDetail {
  string CWE = 1;
  string Name = 2;
  string NameZh = 3;
  //  repeated CWEDetail InterTo = 4;

  string Status = 5;
  bool Stable = 6;
  bool Incomplete = 7;
  string Description = 8;
  string DescriptionZh = 9;
  string LongDescription = 10;
  string LongDescriptionZh = 11;
  repeated string RelativeLanguage = 12;
  string Solution = 13;
  repeated string RelativeCVE = 14;
}

message CVEDetail {
  string CVE = 1;
  string DescriptionZh = 2;
  string DescriptionOrigin = 3;
  string Title = 4;
  string Solution = 5;
  string References = 6;
  string AccessVector = 7;
  string AccessComplexity = 8;
  string Authentication = 9;
  string ConfidentialityImpact = 10;
  string IntegrityImpact = 11;
  string AvailabilityImpact = 12;
  string Severity = 14;
  int64 PublishedAt = 15;
  string CWE = 16;
  string CVSSVersion = 17;
  string CVSSVectorString = 18;
  double BaseCVSSv2Score = 19;
  double ExploitabilityScore = 20;
  bool ObtainAllPrivileged = 21;
  bool ObtainUserPrivileged = 22;
  bool ObtainOtherPrivileged = 23;
  bool UserInteractionRequired = 24;
  string Product = 25;
  int64  UpdatedAt = 26;
  int64  LastModifiedData = 27;
}


message CVEDetailEx {
  CVEDetail CVE = 1;
  repeated CWEDetail CWE = 2;
}


message GetCVERequest {
  string CVE = 1;
}


message QueryCVEResponse {
  Paging Pagination = 1;
  int64 Total = 2;
  repeated CVEDetail Data = 3;
}

message QueryCVERequest {
  Paging Pagination = 1;
  // NETWORK/LOCAL/ADJACENT_NETWORK/PHYSICAL
  string AccessVector = 2;
  // HIGH/MIDDLE/LOW
  string AccessComplexity = 3;
  string CWE = 4;
  string Year = 5;
  string Severity = 6;
  double Score = 7;
  string Product = 8;

  // by published_date
  string AfterYear = 9;
  bool ChineseTranslationFirst = 10;
  string Keywords = 11;
}

message ImportsProfileDatabaseRequest {
  string LocalProfileFile = 1;
}

message ExportsProfileDatabaseRequest {
  string LocalProfileFile = 1;
}


message UpdateCVEDatabaseRequest {
  string Proxy = 1;
  bool JustUpdateLatestCVE = 2;
}

message IsCVEDatabaseReadyResponse {
  bool Ok = 1;
  string Reason = 2;
  bool ShouldUpdate = 3;
}

message IsCVEDatabaseReadyRequest {

}